# quteGo

./: .gitmodules  .travis.yml  .travis_macos.sh  AUTHORS  CMakeLists.txt  README.md  VERSION_HISTORY  appveyor.yml  configure  configure.ac  macdeploy.sh  q5go.pro
.github/workflows/: macos.yml  windows.yml
html/: help.xml
src/: CMakeLists.txt  Makefile.am  Makefile.in  analyzedlg.cpp  analyzedlg.h  archivehandler.cpp  archivehandler.h  archivehandlerfactory.cpp  archivehandlerfactory.h  archiveitemlistwidget.cpp  archiveitemlistwidget.h  audio.cpp  audio.h  autodiagsdlg.cpp  autodiagsdlg.h  bitarray.h  board.cpp  board.h  boardwindow_gui.ui  clickableviews.h  clientwin.cpp  clientwin.h  clientwindow_gui.ui  clockview.cpp  clockview.h  config.h  dbdialog.cpp  dbdialog.h  defines.h  encodingutils.cpp  encodingutils.h  evalgraph.cpp  evalgraph.h  figuredlg.cpp  figuredlg.h  gamedialog.cpp  gamedialog.h  gamestable.cpp  gamestable.h  gametree.cpp  (+92 more)
src/translations/: qgo_la.ts  qgo_nl.ts  qgo_pt.ts  qgo_ru.ts  qgo_tr.ts  qgo_zh_CN.qm  qgo_zh_CN.ts  qgo_zh_cn.qm  quteGo_cz.ts  quteGo_de.ts  quteGo_dk.ts  quteGo_es.ts  quteGo_fr.ts  quteGo_it.ts  quteGo_la.ts  quteGo_nl.ts  quteGo_pl.ts  quteGo_pt.ts  quteGo_ru.ts  quteGo_tr.ts  quteGo_zh_CN.ts  quteGo_zh_TW.ts
